# automata-dcap-zkvm-cli

./: .env.example  .gitignore  Cargo.toml  README.md
data/: quote.hex
dcap-bonsai-cli/: .env.example  .gitignore  Cargo.toml  README.md
dcap-bonsai-cli/solana-client/: README.md  index.ts  package.json  tsconfig.json
dcap-bonsai-cli/solana-client/data/: receipt.json
dcap-bonsai-cli/solana-client/deploy/: program-keypair.json
dcap-bonsai-cli/solana-client/utils/: proof.ts
dcap-bonsai-cli/src/: constants.rs  lib.rs  main.rs
dcap-bonsai-cli/src/chain/: attestation.rs  mod.rs
dcap-bonsai-cli/src/chain/pccs/: enclave_id.rs  pcs.rs
dcap-bonsai-cli/src/code/: guest
dcap-bonsai-cli/src/solana/: mod.rs  write.rs
dcap-sp1-cli/: .env.example  Cargo.toml  README.md
dcap-sp1-cli/dcap-sp1-solana-program/: Cargo.toml
dcap-sp1-cli/dcap-sp1-solana-program/src/: lib.rs
dcap-sp1-cli/src/: constants.rs  lib.rs  main.rs
dcap-sp1-cli/src/chain/: attestation.rs  mod.rs
dcap-sp1-cli/src/chain/pccs/: enclave_id.rs  fmspc_tcb.rs  pcs.rs
dcap-sp1-cli/src/solana/: mod.rs
src/: bonsai.rs  chain.rs  constants.rs  lib.rs  main.rs  output.rs  parser.rs
src/chain/: attestation.rs  mod.rs
src/chain/pccs/: enclave_id.rs  fmspc_tcb.rs
