[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
hex = "0.4"
serde_json = "1.0"
alloy = { version = "0.1", features = ["full"] }
anyhow = "1.0.82"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.1.3" }
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
x509-parser  = "0.15.1"
env_logger = { version = "0.10" }
log = { version = "0.4" }
risc0-zkvm = "1.1.3"
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git", branch = "feat/advisory" }