[package]
name = "dcap-bonsai-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[dependencies]
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.1" }
bincode = "1.3.3"
env_logger = { version = "0.10" }
log = { version = "0.4" }
risc0-zkvm = { version = "1.2.1" }
dcap-rs = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
x509-parser = { workspace = true }
alloy = { workspace = true }
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
automata-dcap-client = { workspace = true }

# RiscZero Solana Groth16 Verifier
risc0-solana = { git = "https://github.com/risc0/risc0-solana.git", rev = "41303f1ec24242703a03f03c85e72aaf69355c7a" }
