[package]
name = "dcap-bonsai-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[dependencies]
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.2.2" }
bincode = "1.3.3"
env_logger = { version = "0.10" }
log = { version = "0.4" }
risc0-zkvm = "^2.2.0"
dcap-rs = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
x509-parser = { workspace = true }
alloy = { workspace = true }