[package]
name = "dcap-sp1-solana-program"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.3"
solana-program = "=2.1.6"
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }